--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: swift
 xcode_project: PostMishone.xcodeproj
-xcode_scheme: PostMishoneTests
+xcode_scheme: PostMishoneUITests
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone 7
